--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>GrowthOps Asia</title>
   </head>
   <body class="">
-    <div id="root" class="font-display w-full h-full bg-yellow-500 text-white"></div>
+    <div id="root" class="font-display w-full h-full bg-black text-white"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
